--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ port.client.secret=
 ossf.scorecard.repo.url=
 io.port.ScorecardService/mp-rest/uri=${ossf.scorecard.repo.url}
 port.scheduler.frequency=5m
+
+quarkus.kubernetes.env.vars.port-ingest-url=${port.ingest.url}
+quarkus.kubernetes.env.vars.port-client-id=${port.client.id}
+quarkus.kubernetes.env.vars.port-client-secret=${port.client.secret}
+quarkus.kubernetes.env.vars.ossf-scorecard-repo-url=${ossf.scorecard.repo.url}
+quarkus.kubernetes.env.vars.port-scheduler-frequency=${port.scheduler.frequency}
